realization started
