# internal/forum/models.go
@@ -1,7 +1,6 @@
 package forum
 
 import (
-	"DBproject/internal/forum/delivery/http"
 	"DBproject/models"
 	"github.com/labstack/echo/v4"
 )
@@ -16,13 +15,13 @@ type ForumHandler interface {
 type ForumUsecase interface {
 	CreateNewForum(forum models.Forum) (models.Forum, models.Error)
 	GetForum(id string) (models.Forum, models.Error)
-	GetUsers(slug string, params http.UsersParse) ([]models.User, models.Error)
-	GetThreads(slug string, params http.UsersParse) ([]models.Thread, models.Error)
+	GetUsers(slug string, params models.ParseParams) ([]models.User, models.Error)
+	GetThreads(slug string, params models.ParseParams) ([]models.Thread, models.Error)
 }
 
 type ForumRepo interface {
 	CreateNewForum(forum models.Forum) (models.Forum, models.Error)
 	GetForum(id string) (models.Forum, models.Error)
-	GetUsers(slug string, params http.UsersParse) ([]models.User, models.Error)
-	GetThreads(slug string, params http.UsersParse) ([]models.Thread, models.Error)
+	GetUsers(slug string, params models.ParseParams) ([]models.User, models.Error)
+	GetThreads(slug string, params models.ParseParams) ([]models.Thread, models.Error)
 }
