# internal/service/models.go
@@ -4,6 +4,13 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+type DBinfo struct {
+	Users int `json:"user"`
+	Forums int `json:"forum"`
+	Threads int `json:"thread"`
+	Posts int `json:"post"`
+}
+
 type ServiceHandler interface {
 	Clear(c echo.Context) error
 	Status(c echo.Context) error
@@ -11,11 +18,11 @@ type ServiceHandler interface {
 
 type ServiceUsecase interface {
 	Clear() error
-	Status() error
+	Status() DBinfo
 }
 
 type ServiceRepo interface {
 	Clear() error
-	Status() error
+	Status() DBinfo
 }
 
